# MLA_Hook

./: .gitignore  01_STRUKTUR_PROJECT.md  02_ANALISIS_HOOK.md  03_ALUR_HOOK.md  04_DAFTAR_FUNGSI_GAME.md  05_REKOMENDASI_REFACTOR.md  GUIDE.md  SESSION_HANDOVER_BYTECODE_PATCH.txt  SESSION_HANDOVER_FULL.txt  STARTUP_SEQUENCE.md  VERIFIED.md  build_android.ps1  find_all_addrs.py  find_hook_targets.py  gadget_il2cpp_formation.js  hook_il2cpp_formation.js  inject_gadget.ps1  query_db.py  query_db2.py  query_db3.py  query_db4.py  query_db5.py  query_db6.py  query_master2.py  query_master_entries.py  query_sqlite_entities.py  query_sqlite_schema.py  query_tags.py  query_tags2.py  read_hero_data.py  readme.txt
.github/workflows/: build.yml
DUMP 8-7-2026/mla_dumps/: -----------------------------------------------------------------------------_--_FTP_support_for_the.luac  -----------------------------------------------------------------------------_--_LuaSocket_helper_mo.luac  -----------------------------------------------------------------------------_--_Unified_SMTP_FTP_su.luac  0_0012e24ccf35d5be3ae9d945ae2c7e8f.mt.luac  0_00368165a7c8cc0a4c7ae0d8f3440e9e.mt.luac  0_0063336702a2a6038c6e1d5659ea0266.mt.luac  0_00690ac3d4752ff895bd722f66fe01f7.mt.luac  0_0071c4bf9624a9554e9a85a270000f07.mt.luac  0_00d4cdac27271da7d2a511c4e6db8d7e.mt.luac  (+2237 more)
PROJECT/analysis/: extract.ps1  (+7 more)
dumps/: mla_debug.txt
module/: CMakeLists.txt  download_prebuilt.ps1  download_prebuilt.sh
module/include/: hooking.h
module/src/: main.cpp
patches/: fix_osarch_features.py
sources/: lua_offsets.h
(+2918 files in other folders)
